stands/prom/k8s/web-client/web-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: web-client
  namespace: messenger-ajax

spec:

  selector:
    app: web-client

  ports:

  - port: 80
    targetPort: 5000

  type: ClusterIP
