stands/prom/k8s/web-client/ingress-settings.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ajax-ingress
  namespace: messenger-ajax

spec:

  ingressClassName: nginx

  rules:

  - host: ajax.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:
            name: web-client

            port:
              number: 80
